# dark-triad-services

./: .gitignore  CMakeLists.txt  README.md
commons/drogon-extended/: CMakeLists.txt  README.md
commons/drogon-extended/lib/drogon/: CMakeLists.txt
commons/drogon-extended/src/exception_mapper/: global_exception_mapper.cpp
commons/drogon-extended/src/json_mapper/: json_converter.cpp  security.cpp
commons/drogon-extended/src/security/: api_key_guard.cpp  jwt_token_guard.cpp
services/game_database/: CMakeLists.txt  Dockerfile  deploy.sh  run_karate_tests.sh  verify_deployment.sh
services/game_database/build-pipeline/: verify_deployment.sh
services/game_database/database/tables/: character.sql
services/game_database/include/configuration/: postgres_config.hpp  web_server_config.hpp
services/game_database/include/converter/: character_converter.hpp
services/game_database/src/configuration/: base_config.cpp  postgres_config.cpp
services/game_database/src/converter/: character_converter.cpp
services/game_database/src/database/: characters_db.cpp
services/game_database/test/login/: login.feature
services/login/: CMakeLists.txt  Dockerfile  README.md  config.json  deploy.sh  release.sh  run_karate_tests.sh  verify_deployment.sh
services/login/build-pipeline/: deploy.sh  rollback.sh  verify-deployment.sh  verify_deployment.sh
services/login/documentation/: openapi.yaml
services/login/http-requests/: http-client.env.json
services/login/http-requests/login/: challenge.http  token.http
services/login/include/client/: auth0_client.hpp  dummy_oidc_client.hpp  oidc_client.hpp
services/login/include/configuration/: app_config.hpp  base_config.hpp  oidc_config.hpp  redis_config.hpp  web_server_config.hpp
services/login/include/controller/: login_controller.hpp
services/login/include/database/: sessions_db.hpp
services/login/include/factory/: challenge_response_session_factory.hpp  challenge_session_factory.hpp  credentials_factory.hpp
services/login/src/: main.cpp
services/login/src/client/: auth0_client.cpp  dummy_oidc_client.cpp
services/login/src/configuration/: app_config.cpp  base_config.cpp  oidc_config.cpp  redis_config.cpp  web_server_config.cpp
services/login/src/controller/: login_controller.cpp  (+1 more)
services/login/test/: karate-config.js
(+165 files in other folders)
